--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,30 @@ nav .dropdown a {
 }
 
 /*  banner*/
+
+.slide{
+    display: none;
+    width: 100%;
+    height: 200px;
+    background-color: pink;
+    text-align: center;
+    line-height: 200px;
+    font-size: 30px;
+}
+
+
+
+.slide.active{
+    display: block;
+}
+
+.slider{
+    position: relative;
+    overflow: hidden;
+    width: 525px;
+    height: 432px;
+}
+
 .banner {
     display: flex;
     justify-content: space-between;
